--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "url"           : "http://backbonejs.org",
   "keywords"      : ["model", "view", "controller", "router", "server", "client", "browser"],
   "author"        : "Jeremy Ashkenas <jeremy@documentcloud.org>",
-  "dependencies"  : {
-    "underscore"  : ">=1.5.0"
-  },
   "devDependencies": {
-    "phantomjs": "1.9.0-1",
     "docco": "0.6.1",
     "coffee-script": "1.6.1"
   },
@@ -24,5 +20,13 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/jashkenas/backbone.git"
+  },
+  "cortex":{
+      "dependencies"  : {
+          "underscore"  : "~1.5.0",
+          "zepto"  : "~1.1.0"
+      },
+      "scripts":{
+      }
   }
 }
